--- a/css/main.css
+++ b/css/main.css
@@ -5,4 +5,52 @@ body {
 
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  display: block;
+  min-width: 270px;
+  max-width: 1600px;
+  padding: 0 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 40px;
+  border-bottom: 3px solid black;
+  font-size: 16px;
+  font-weight: 900;
+}
+
+.hero {
+  padding: 60px 0;
+}
+
+.hero__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+}
+
+.hero__item {
+  text-align: end;
+  line-height: 2;
+}
+
+.hero__title {
+  font-size: 32px;
 }/*# sourceMappingURL=main.css.map */
