--- a/sass/utilits/_base.scss
+++ b/sass/utilits/_base.scss
@@ -4,5 +4,16 @@ body{
 }
 ul{
     list-style: none;
+    padding: 0;
+    margin: 0;
+    
 
+}
+.container{
+    display:block;
+    min-width:270px;
+    max-width: 1600px;
+    padding: 0 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
