--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
 @import './utilits/base';
 @import './components/_header';
-@import './components/hero'
+@import './components/hero';
+@import './components/experience.scss';
+@import './components/footer';
