--- a/css/main.css
+++ b/css/main.css
@@ -53,4 +53,90 @@ ul {
 
 .hero__title {
   font-size: 32px;
+}
+
+div.experience {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  width: 50%;
+  padding-left: 40px;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.education {
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  border-right: 3px solid black;
+  padding-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 50%;
+}
+
+.experience__list {
+  display: block;
+}
+
+.experience__item {
+  display: block;
+  margin-bottom: 60px;
+}
+
+.experience__title {
+  text-transform: uppercase;
+}
+
+.experience__name {
+  text-transform: uppercase;
+}
+
+.experience__description {
+  font-size: 18px;
+}
+
+.experience__skills-list {
+  display: block;
+  padding-left: 16px;
+}
+
+.experience__skills {
+  list-style-type: disc;
+  margin-bottom: 16px;
+  margin-left: 16px;
+}
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__item {
+  padding: 25px 0;
+  font-size: 22px;
 }/*# sourceMappingURL=main.css.map */
