--- a/css/main.css
+++ b/css/main.css
@@ -17,22 +17,46 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
+@media (min-width: 480px) {
+  .container {
+    width: 380px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    width: 760px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1180px;
+  }
+}
 
 .header__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
   width: 100%;
   height: 40px;
-  border-bottom: 3px solid black;
   font-size: 16px;
   font-weight: 900;
+}
+@media (min-width: 768px) {
+  .header__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: 3px solid black;
+  }
+}
+
+.header__item {
+  padding: 16px 0;
 }
 
 .hero {
@@ -40,10 +64,15 @@ ul {
 }
 
 .hero__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 40px;
+  display: block;
+}
+@media (min-width: 768px) {
+  .hero__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 40px;
+  }
 }
 
 .hero__item {
