--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,22 @@
 .header__list{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
+   display: block;
+    @media(min-width:768px){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 3px solid black;
+    }
+
     width: 100%;
     height: 40px;
 
-    border-bottom: 3px solid black;
+   
     font-size: 16px;
     font-weight: 900;
+
+}
+
+.header__item{
+    padding: 16px 0;
 
 }
