--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,8 +3,11 @@
 }
 
 .hero__list{
-    display: flex;
-    gap:40px
+    display:block;
+    @media(min-width: 768px){
+        display: flex;
+        gap:40px
+    }
 }
 .hero__item{
     text-align: end;
