--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,8 +1,19 @@
 .footer__list{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+    @media(min-width:768px){
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
 }
 .footer__item{
 padding: 25px 0;
-font-size:22px;
+margin-right: 40px;
+font-size: 16px;
+@media(min-width:768px){
+    font-size:22px;
+    margin-right:0 ;
+}
+
 }
