--- a/sass/utilits/_base.scss
+++ b/sass/utilits/_base.scss
@@ -13,16 +13,27 @@ ul{
     display:block;
     min-width:270px;
     max-width: 1600px;
-    padding: 0 16px;
+    width:380px;
+    padding: 0 25px;
     margin-left: auto;
     margin-right: auto;
-    @media(min-width: 480px){
-        width:380px;
-    }
+    
     @media(min-width: 768px){
         width:760px;
     }
     @media(min-width: 1200px){
         width:1180px;
     }
+}
+img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+a{
+    font-weight: 900;
+    font-family:'Merriweather', serif;
+    font-style: normal;
+    text-decoration: none;
+    color:purple
 }
