--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,12 +8,16 @@
     }
 }
 .footer__item{
-padding: 25px 0;
-margin-right: 40px;
-font-size: 16px;
-@media(min-width:768px){
-    font-size:22px;
-    margin-right:0 ;
-}
 
+margin-right: 40px;
+
+    @media(min-width:768px){
+        font-size:22px;
+        margin-right:0 ;
+    }
+}
+.footer__link{
+    font-size: 16px;
+    padding: 25px 0;
+ 
 }
