--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -20,3 +20,19 @@
     padding: 16px 0;
 
 }
+
+.calling-message{
+    width:100%;
+    text-align: start;
+}
+.calling-message__title{
+    font-size: 16px;
+}
+
+.telegram-icon{
+    margin:0 10px;
+}
+
+.viber-icon{
+    margin: 0 10px;
+}
